fix(files): stop aside component from stretching

--- a/pages/files/browse/Browse.less
+++ b/pages/files/browse/Browse.less
@@ -26,6 +26,8 @@
   }
 
   .files-aside-container {
+    width: 350px;
+    min-width: 350px;
     height: fit-content;
     position: sticky;
     top: 0;
